# cosmos-group-rgb-xray

./: .gitignore  NOTES.md  README.md  find_groundbased.slurm  pyproject.toml  requirements.txt  run_batch_xray.slurm  run_hz_cutouts.slurm
.claude/: settings.local.json
catalogs/: hz_detected_cutout.csv  top20_cutout_combined.csv  top20_cutout_cw_all.csv  top20_cutout_cw_hcg.csv
configs/: batch_top20.yaml  group15.yaml
cosmos_rgb_xray/: __init__.py  annotate.py  batch.py  blend.py  cutout_size.py  io_fits.py  rgb.py  single.py  stiff.py  stretch.py  xray.py
cosmos_rgb_xray_v2/: __init__.py  background.py  bands.py  batch.py  config.py  rgb.py  stretch.py  xray.py
logs/: groundbased_mosaics.txt  hz_cutouts_799510.err  xray_batch_799507.err
scripts/: batch_xray.py  export_chat.py  make_cutouts.py  run_cutouts.sh  run_cutouts_slurm.sh  run_ground_cutouts.sh  run_hz_rgb_xray.sh  run_top20_rgb_xray.sh
